--- a/.github/workflows/trudeau.yml
+++ b/.github/workflows/trudeau.yml
@@ -3,6 +3,7 @@ on:
   schedule:
     # 5pm UTC is 1pm eastern, which should be adequate time for the videos to become available
     - cron:  '10 17 * * *'
+    - cron:  '10 18 * * *'
   push: {}
 
 jobs:
